After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 743674 - error building gsd in jhbuild
error building gsd in jhbuild
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: general
3.15.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2015-01-29 05:40 UTC by Alberts Muktupāvels
Modified: 2015-02-20 12:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
power: add missing include (756 bytes, patch)
2015-01-29 05:41 UTC, Alberts Muktupāvels
committed Details | Review
common: link with libgsd.la (758 bytes, patch)
2015-01-29 05:41 UTC, Alberts Muktupāvels
committed Details | Review
build log (46.88 KB, text/plain)
2015-01-30 04:46 UTC, Alberts Muktupāvels
  Details

Description Alberts Muktupāvels 2015-01-29 05:40:26 UTC
1. warning building power plugin:

gpm-common.c:201:9: warning: implicit declaration of function ‘gnome_settings_get_chassis_type’ [-Wimplicit-function-declaration]
         type = gnome_settings_get_chassis_type ();

2. error building xrandr plugin:

../../plugins/common/.libs/libcommon.a(libcommon_la-gsd-device-manager.o): In function `gsd_device_manager_get':
/home/alberts/JHBuild/checkout/gnome-settings-daemon/plugins/common/gsd-device-manager.c:269: undefined reference to `gnome_settings_is_wayland'
Comment 1 Alberts Muktupāvels 2015-01-29 05:41:23 UTC
Created attachment 295718 [details] [review]
power: add missing include
Comment 2 Alberts Muktupāvels 2015-01-29 05:41:41 UTC
Created attachment 295719 [details] [review]
common: link with libgsd.la
Comment 3 Bastien Nocera 2015-01-29 11:23:35 UTC
(In reply to comment #0)
<snip>
> 2. error building xrandr plugin:
> 
> ../../plugins/common/.libs/libcommon.a(libcommon_la-gsd-device-manager.o): In
> function `gsd_device_manager_get':
> /home/alberts/JHBuild/checkout/gnome-settings-daemon/plugins/common/gsd-device-manager.c:269:
> undefined reference to `gnome_settings_is_wayland'

I can't reproduce that.
Comment 4 Alberts Muktupāvels 2015-01-29 15:16:28 UTC
Deleted gnome-settings-daemon from checkout directory and run jhbuild buildone gnome-settings-daemon. And it fails with same error:

make[3]: Entering directory '/home/alberts/JHBuild/checkout/gnome-settings-daemon/plugins/xrandr'
  CC       libxrandr_la-gsd-xrandr-plugin.lo
  CC       libxrandr_la-gsd-xrandr-manager.lo
  CC       gsd_test_xrandr-test-xrandr.o
  CC       gsd_test_xrandr-gsd-xrandr-manager.o
LC_ALL=C /usr/bin/intltool-merge -d -u -c ../../po/.intltool-merge-cache ../../po xrandr.gnome-settings-plugin.in xrandr.gnome-settings-plugin
Found cached translation database
Merging translations into xrandr.gnome-settings-plugin.
  CCLD     gsd-test-xrandr
  CCLD     libxrandr.la
../../plugins/common/.libs/libcommon.a(libcommon_la-gsd-device-manager.o): In function `gsd_device_manager_get':
/home/alberts/JHBuild/checkout/gnome-settings-daemon/plugins/common/gsd-device-manager.c:269: undefined reference to `gnome_settings_is_wayland'
collect2: error: ld returned 1 exit status
Makefile:642: recipe for target 'gsd-test-xrandr' failed
make[3]: *** [gsd-test-xrandr] Error 1
make[3]: *** Waiting for unfinished jobs....
make[3]: Leaving directory '/home/alberts/JHBuild/checkout/gnome-settings-daemon/plugins/xrandr'
Comment 5 Bastien Nocera 2015-01-29 16:11:01 UTC
Still not failing, please attach the full build log.
Comment 6 Alberts Muktupāvels 2015-01-30 04:46:28 UTC
Created attachment 295788 [details]
build log
Comment 7 Alberts Muktupāvels 2015-02-19 23:31:41 UTC
Still getting this error... Do you have any idea what could cause this error?
Comment 8 Benedikt Morbach 2015-02-20 10:59:33 UTC
I can reliably trigger it with LDFLAGS="-Wl,--as-needed", while the build passes without it, so there does indeed seem to be some underlinking going on.
Comment 9 Bastien Nocera 2015-02-20 12:38:47 UTC
Tested and fixed with some changes to the commit message.