power: Fix compile-time warning

gpm-common.c:201:9: warning: implicit declaration of function ‘gnome_settings_get_chassis_type’ [-Wimplicit-function-declaration]
        type = gnome_settings_get_chassis_type ();

https://bugzilla.gnome.org/show_bug.cgi?id=743674